--- a/notebooks/mnist_vae.ipynb
+++ b/notebooks/mnist_vae.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\wtais\\Anaconda3\\envs\\hackthewind\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -55,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -102,44 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 / 1000 ; average loss: -903.7930147727272; Reconstruction loss :  903.7307443181815; KL loss 0.06227339428121392\n",
-      "Epoch 11 / 1000 ; average loss: -94939.19729431804; Reconstruction loss :  94927.62309204551; KL loss 11.574278690745613\n",
-      "Epoch 21 / 1000 ; average loss: -203070.51767613605; Reconstruction loss :  203044.6631647727; KL loss 25.854480777038177\n",
-      "Epoch 31 / 1000 ; average loss: -311204.4344215907; Reconstruction loss :  311161.72074659076; KL loss 42.71381359175759\n",
-      "Epoch 41 / 1000 ; average loss: -419343.55602159037; Reconstruction loss :  419278.77852840855; KL loss 64.77752486217656\n",
-      "Epoch 51 / 1000 ; average loss: -527495.1222397718; Reconstruction loss :  527395.8364920452; KL loss 99.28567990035137\n",
-      "Epoch 61 / 1000 ; average loss: -635681.9012579522; Reconstruction loss :  635512.8942193171; KL loss 169.00722265603346\n",
-      "Epoch 71 / 1000 ; average loss: -743965.7135488613; Reconstruction loss :  743629.9518374992; KL loss 335.7618233307487\n",
-      "Epoch 81 / 1000 ; average loss: -852465.2246579521; Reconstruction loss :  851747.0100556804; KL loss 718.2149834514876\n",
-      "Epoch 91 / 1000 ; average loss: -961354.2652943161; Reconstruction loss :  959864.0680193168; KL loss 1490.197642755467\n",
-      "Epoch 101 / 1000 ; average loss: -1070852.7359124983; Reconstruction loss :  1067981.1262374986; KL loss 2871.609950567963\n",
-      "Epoch 111 / 1000 ; average loss: -1181213.3565670445; Reconstruction loss :  1176098.184473861; KL loss 5115.172228977052\n",
-      "Epoch 121 / 1000 ; average loss: -1292702.5165124978; Reconstruction loss :  1284215.2426193166; KL loss 8487.27404034069\n",
-      "Epoch 131 / 1000 ; average loss: -1405582.6958397708; Reconstruction loss :  1392332.300619318; KL loss 13250.3952494316\n",
-      "Epoch 141 / 1000 ; average loss: -1520099.581985225; Reconstruction loss :  1500449.3584738614; KL loss 19650.223746022504\n",
-      "Epoch 151 / 1000 ; average loss: -1636475.444748862; Reconstruction loss :  1608566.4165102255; KL loss 27909.028323295213\n",
-      "Epoch 161 / 1000 ; average loss: -1754912.7837488602; Reconstruction loss :  1716683.474673863; KL loss 38229.30934374975\n",
-      "Epoch 171 / 1000 ; average loss: -1875601.854767042; Reconstruction loss :  1824800.533182954; KL loss 50801.32181874979\n",
-      "Epoch 181 / 1000 ; average loss: -1998726.1836761308; Reconstruction loss :  1932917.5914920443; KL loss 65808.59229602251\n",
-      "Epoch 191 / 1000 ; average loss: -2124465.5509306756; Reconstruction loss :  2041034.650092043; KL loss 83430.90109374974\n",
-      "Epoch 201 / 1000 ; average loss: -2252997.4775306713; Reconstruction loss :  2149151.7082374995; KL loss 103845.7695596589\n",
-      "Epoch 211 / 1000 ; average loss: -2384497.972639762; Reconstruction loss :  2257268.766292042; KL loss 127229.20657329526\n",
-      "Epoch 221 / 1000 ; average loss: -2519141.924548848; Reconstruction loss :  2365385.8246920398; KL loss 153756.1002778408\n",
-      "Epoch 231 / 1000 ; average loss: -2657103.3184215766; Reconstruction loss :  2473502.8829284054; KL loss 183600.4361460226\n",
-      "Epoch 241 / 1000 ; average loss: -2798555.373257941; Reconstruction loss :  2581619.9413284096; KL loss 216935.43239147708\n",
-      "Epoch 251 / 1000 ; average loss: -2943670.6291306643; Reconstruction loss :  2689736.999601139; KL loss 253933.62980056772\n",
-      "Epoch 261 / 1000 ; average loss: -3092621.026821571; Reconstruction loss :  2797854.0577647756; KL loss 294766.96933693124\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-a2b4fead4122>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mepoch_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepoch_label\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmnist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnext_batch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvae\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mepoch_label\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepoch_label\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrecon\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvae\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepoch_x\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mepoch_loss\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmnist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_examples\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mvae\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mvae\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mrecon_loss\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mrecon\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmnist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_examples\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mvae\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mvae\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch 1 / 1000 ; average loss: -927.059981818182; Reconstruction loss :  926.9916397727275; KL loss 0.06833730219060725\n"
      ]
     }
    ],
