Added notebooks for Japanese and Fashion MNIST

--- a/notebooks/mnist_vae.ipynb
+++ b/notebooks/mnist_vae.ipynb
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
-      "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
-      "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n"
+      "Extracting /tmp/data/fashion\\train-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/data/fashion\\train-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/data/fashion\\t10k-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/data/fashion\\t10k-labels-idx1-ubyte.gz\n"
      ]
     }
    ],
@@ -41,7 +41,27 @@
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "mnist = input_data.read_data_sets(\"/tmp/data/\", one_hot = True)"
+    "mnist = input_data.read_data_sets(\"/tmp/data/1\", one_hot = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.contrib.learn.python.learn.datasets.mnist.DataSet at 0x20987a38908>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnist.test."
    ]
   },
   {
